GUI 구현 및 이벤트 연결
- 전체적인 GUI 창 구조 및 전환 구현

- 편의성을 위해 Room에서 userName 필드 제거

* 입출력 수정 필요(serial version ID 추가해야 할 것 같다)

* admin 객체 사용해서 백엔드와 연결 구현 필요

--- a/StudyCafe/.classpath
+++ b/StudyCafe/.classpath
@@ -6,5 +6,8 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="GUI"/>
+	<classpathentry kind="src" path="user"/>
+	<classpathentry kind="src" path="Admin"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
